--- a/environment.yml
+++ b/environment.yml
@@ -92,7 +92,7 @@ dependencies:
       - lmdb==1.4.1
       - markupsafe==2.1.3
       - matplotlib==3.7.2
-      - mmcv-full==1.3.9
+      # - mmcv-full==1.3.9
       - murmurhash==1.0.9
       - networkx==3.1
       - omegaconf==2.3.0
@@ -109,7 +109,7 @@ dependencies:
       - pycocotools==2.0.7
       - pydantic==2.3.0
       - pydantic-core==2.6.3
-      - pydensecrf==1.0rc2
+      # - pydensecrf==1.0rc2
       - pyparsing==3.0.9
       - python-dateutil==2.8.2
       - pytz==2023.3
